--- a/agents-docs/content/docs/quick-start/observability.mdx
+++ b/agents-docs/content/docs/quick-start/observability.mdx
@@ -21,24 +21,17 @@ You can set up SigNoz in two ways:
 2. Create a new project or use an existing one
 3. Note your ingestion endpoint and API key from the project settings
 
-### Step 2: Configure Run API Environment
-
-Navigate to your `run-api` directory under `apps` and create or update your `.env` file:
-
-```bash
-# OpenTelemetry Configuration for SigNoz Cloud
-OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=https://ingest.us.signoz.cloud:443/v1/traces
-OTEL_EXPORTER_OTLP_TRACES_HEADERS="signoz-ingestion-key=<your-ingestion-key>"
-```
-
-### Step 3: Configure Root Environment
+### Step 2: Configure Root Environment
 
 In your **root project directory**, update your `.env` file:
 
 ```bash
 # SigNoz Cloud Configuration
-NEXT_PUBLIC_SIGNOZ_URL=https://<your-organization>.signoz.cloud
+SIGNOZ_URL=https://<your-organization>.signoz.cloud
 SIGNOZ_API_KEY=<your-api-key>
+
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=https://ingest.us.signoz.cloud:443/v1/traces
+OTEL_EXPORTER_OTLP_TRACES_HEADERS="signoz-ingestion-key=<your-ingestion-key>"
 ```
 
 
@@ -88,7 +81,7 @@ In your **root project directory** (of my-agent-directory), update your `.env` f
 
 ```bash
 # SigNoz Configuration
-NEXT_PUBLIC_SIGNOZ_URL=http://localhost:3080
+SIGNOZ_URL=http://localhost:3080
 SIGNOZ_API_KEY=your-signoz-api-key
 ```
 
@@ -108,3 +101,10 @@ To get your SigNoz API key:
 2. Make some requests to your agents to generate traces
 
 3. Open SigNoz at `http://localhost:3080` and navigate to the "Traces" section to see your agent traces
+
+## Additional Observability: Langfuse Integration
+
+If you want to connect to **Langfuse** for specialized LLM observability alongside SigNoz, you'll need to use Docker and the **local method** (Option 2 above). 
+
+👉 **See the [Langfuse Usage guide](/typescript-sdk/langfuse-usage)** for complete setup instructions with Docker.
+
