--- a/agents-docs/content/docs/visual-builder/context-fetchers.mdx
+++ b/agents-docs/content/docs/visual-builder/context-fetchers.mdx
@@ -96,3 +96,7 @@ Here is an example of an agent prompt using the context variable defined above:
 ```
 You are a helpful assistant for {{userInfo.name}}.
 ```
+
+# Related documentation
+
+- [Request Context](/visual-builder/request-context) - Learn how to pass dynamic context to your agents via HTTP headers
