fix header depth

--- a/agents-docs/content/docs/visual-builder/context-fetchers.mdx
+++ b/agents-docs/content/docs/visual-builder/context-fetchers.mdx
@@ -16,8 +16,7 @@ Context fetchers allow you to embed real-time data from external APIs into your 
 - **Request context integration**: Use request-specific parameters to customize data fetching.
 - **Data transformation**: Transform API responses into the exact format your agent needs.
 
-
-### Context Fetchers vs Tools
+## Context Fetchers vs Tools
 
 - **Context Fetchers**: Pre-populate agent prompts with dynamic data
   - Run automatically before/during conversation startup
