docs - fixing typos

--- a/agents-docs/content/docs/api-reference/authentication/manage-api.mdx
+++ b/agents-docs/content/docs/api-reference/authentication/manage-api.mdx
@@ -11,7 +11,7 @@ The Manage API (`agents-manage-api`) has two authentication modes:
 When `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET` is set:
 
 - Include the secret as a Bearer token in requests
-- Reccomended for production environments
+- Recommended for production environments
 
 ### Open Mode
 
