--- a/agents-docs/content/docs/typescript-sdk/cli-reference.mdx
+++ b/agents-docs/content/docs/typescript-sdk/cli-reference.mdx
@@ -330,8 +330,8 @@ inkeep add [template-name]
 **Examples:**
 
 ```bash
-inkeep add weather-graph
-inkeep add weather-graph --target-path ./my-project-directory
+inkeep add weather-project
+inkeep add weather-project --target-path ./my-project-directory
 ```
 
 ## Configuration File
