--- a/agents-docs/content/docs/quick-start/observability.mdx
+++ b/agents-docs/content/docs/quick-start/observability.mdx
@@ -10,7 +10,7 @@ keywords: SigNoz, tracing, observability, OpenTelemetry, monitoring, distributed
 
 You can set up SigNoz in two ways:
 
-1.  **Cloud Setup**: Use SigNoz Cloud (recommended)
+1.  **Cloud Setup**: Use SigNoz Cloud
 2. **Local Setup**: Run SigNoz locally using Docker
 
 ## Option 1: SigNoz Cloud Setup
@@ -61,7 +61,16 @@ git clone https://github.com/inkeep/agents-optional-local-dev
 cd agents-optional-local-dev
 ```
 
-### Step 2: Start SigNoz Services
+### Step 2: Configure SigNoz Credentials (Optional)
+
+In the `agents-optional-local-dev` repository, you can optionally set credentials by adding these to your `.env` file:
+
+```bash
+SIGNOZ_ADMIN_EMAIL=admin@example.com
+SIGNOZ_ADMIN_PASSWORD="adminADMIN#1"
+```
+
+### Step 3: Start SigNoz Services
 
 Run the following command to start SigNoz and related services:
 
@@ -75,7 +84,9 @@ This will start:
 - SigNoz OTEL collector
 - ClickHouse database
 
-### Step 3: Configure Environment Variables
+When you visit `http://localhost:3080`, you can log in using the credentials you configured above.
+
+### Step 4: Configure Environment Variables
 
 In your **root project directory** (of my-agent-directory), update your `.env` file:
 
@@ -91,7 +102,7 @@ To get your SigNoz API key:
 2. Navigate to Settings → Account Settings → API Keys
 3. Create a new API key or copy an existing one
 
-### Step 4: Verify Setup
+### Step 5: Verify Setup
 
 1. Restart your Inkeep agents:
    ```bash
@@ -101,6 +112,10 @@ To get your SigNoz API key:
 2. Make some requests to your agents to generate traces
 
 3. Open SigNoz at `http://localhost:3080` and navigate to the "Traces" section to see your agent traces
+
+For more information on how to debug traces, see the [SigNoz Usage guide](/typescript-sdk/signoz-usage).
+
+
 
 ## Additional Observability: Langfuse Integration
 
