--- a/agents-docs/content/docs/quick-start/credentials.mdx
+++ b/agents-docs/content/docs/quick-start/credentials.mdx
@@ -8,13 +8,11 @@ icon: "LuKey"
 
 Sign up [here](https://app.nango.dev/signin)
 
-### Step 2: Get your Nango secret key
+### Step 2: Save your Nango secret key
 
-Once you have created your Nango account, you can get your Nango secret key from the Nango dashboard.
+After creating your Nango account, navigate to Environment Settings in your dashboard and copy the secret key.
 
-Environment Settings > Secret Key
-
-### Step 3: Set the Nango secret key at your project's root .env file
+### Step 3: Configure your root `.env` file
 
 ```
 NANGO_SECRET_KEY=your_nango_secret_key
