--- a/agents-docs/content/docs/typescript-sdk/agent-settings.mdx
+++ b/agents-docs/content/docs/typescript-sdk/agent-settings.mdx
@@ -137,4 +137,62 @@ The framework currently supports models from:
 - **OpenAI**: `openai/gpt-5-2025-08-07`, `openai/gpt-4.1-mini-2025-04-14`, `openai/gpt-4.1-nano-2025-04-14`, etc.
 - **Google**: `google/gemini-2.5-pro`, `google/gemini-2.5-flash`, `google/gemini-2.5-flash-lite`, etc.
 
+### Custom Models
+
+For accessing models not directly supported, you can use:
+
+- **OpenRouter**: Access any model via `openrouter/model-id` format (e.g., `openrouter/anthropic/claude-3.5-sonnet`, `openrouter/meta-llama/llama-3.1-405b`)
+- **Vercel AI SDK Gateway**: Access models through your gateway via `gateway/model-id` format (e.g., `gateway/anthropic/claude-3.5-sonnet`)
+
+```typescript
+models: {
+  base: {
+    model: "openrouter/anthropic/claude-3.5-sonnet",
+    providerOptions: {
+      temperature: 0.7
+    }
+  },
+  structuredOutput: {
+    model: "gateway/openai/gpt-4.1-mini"
+  }
+}
+```
+
+**API Keys**: You need the appropriate API key for the provider you choose to use:
+
+- `ANTHROPIC_API_KEY` for Anthropic models
+- `OPENAI_API_KEY` for OpenAI models  
+- `GOOGLE_GENERATIVE_AI_API_KEY` for Google models
+- `OPENROUTER_API_KEY` for OpenRouter models
+- `AI_GATEWAY_API_KEY` for Vercel AI SDK Gateway models
+
+### Provider Options
+
+Each model settings can include `providerOptions` with provider-specific settings:
+
+- `temperature`: Response creativity (0.0-1.0)
+- `maxTokens`: Maximum response length
+- `timeout`: Request timeout in milliseconds (e.g., `30000` for 30 seconds)
+- Provider-specific options vary by provider
+
+### Inheritance
+
+If no `models` settings are specified, the agent will inherit the models settings from its agent graph, which may inherit from the project settings.
+
+## Graph Prompt Integration
+
+Agents automatically receive any graph-level prompt configuration in addition to their individual prompt:
+
+```typescript
+// Graph-level prompt that gets added to all agents
+const graph = agentGraph({
+  id: "support-graph",
+  graphPrompt: `You work for Acme Corp. Always be professional and helpful. 
+Follow company policies and escalate complex issues appropriately.`,
+  agents: () => [supportAgent, escalationAgent],
+});
+```
+
+The `graphPrompt` is injected into each agent's system prompt, providing consistent context and behavior guidelines across all agents in the graph.
+
 <Note>`openai/gpt-5-2025-08-07` and `openai/gpt-4.1-mini-2025-04-14` require a verified OpenAI organization. If your organization is not yet verified, these models will not be available.</Note>
